Validation and sunat improvements
